<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/azur"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".ui.addCompany.AddCompanyFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginBottom="35dp"
        android:text="@string/dodaj_firmu"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="15dp"
        android:hint="@string/firma">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_company_name"
            android:textColor="@color/black"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="15dp"
        android:hint="@string/adresa">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_company_address"
            android:textColor="@color/black"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="15dp"
        android:hint="@string/mesto">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_company_place"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="15dp"
        android:hint="@string/kontakt_osoba">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/add_company_person"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="15dp"
        android:hint="@string/broj_telefona">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/add_company_phone"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snimi"
        android:textStyle="bold"
        android:padding="5dp"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:id="@+id/add_company_save_button"/>

</LinearLayout>